Bug 256624 - KPresenter displays placeholder text in "Normal" view whereas OO.org and Powerpoint don't
Summary: KPresenter displays placeholder text in "Normal" view whereas OO.org and Powe...
Status: VERIFIED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: opendocument (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: T Zachmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-11 18:41 UTC by Sebastian Sauer
Modified: 2011-06-28 11:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
a.odp (70.30 KB, application/vnd.oasis.opendocument.presentation)
2010-11-11 18:41 UTC, Sebastian Sauer
Details
Picture showing how it looks like in kpresenter (113.30 KB, image/png)
2010-11-11 18:43 UTC, Sebastian Sauer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Sauer 2010-11-11 18:41:20 UTC
Version:           svn (using Devel) 
OS:                Linux

Load the attached document and note that in KPresenter both, the slides's content and the master-page place-holder text is displayed, overlaps each other and makes it hard to read the content.

Both, OO.org Impress and MSOffice Powerpoint, display only the content but not the palceholder text.


Reproducible: Always
Comment 1 Sebastian Sauer 2010-11-11 18:41:53 UTC
Created attachment 53329 [details]
a.odp
Comment 2 Sebastian Sauer 2010-11-11 18:43:31 UTC
Created attachment 53330 [details]
Picture showing how it looks like in kpresenter
Comment 3 Sebastian Sauer 2010-11-11 19:11:52 UTC
The reason for this is that within the content.xml the page-style looks like;

<style:style style:family="drawing-page" style:name="a958">
      <style:drawing-page-properties presentation:background-objects-visible="true"/>
</style:style>

<draw:page draw:style-name="a958">...</draw:page>

The presentation:background-objects-visible="true" is evaluated in kpresenter via;

void KoPAViewModeNormal::paint(KoPACanvasBase* canvas, QPainter& painter, const QRectF &paintRect)
{
    [...]
    if ( m_view->activePage()->displayMasterShapes() ) {
        m_canvas->masterShapeManager()->paint( painter, *converter, false );
    }
    [...]
}

So, we ask the masterShapeManager() to draw it's content in that case what is correct. What is not correct is that the placeholder-text should NOT be displayed in that case. This is the big difference between being in the masterpageview and being in a normalview that has presentation:background-objects-visible="true" defined.
Comment 4 Sebastian Sauer 2010-11-12 00:42:59 UTC
SVN commit 1195774 by sebsauer:

Fix KPresenter displays master-page text rather then only background objects when ODF presentation:background-objects-visible is true.
@zagge: ok?

CC_MAIL:t.zachmann@zagge.de
BUG:256624


 M  +10 -0     libs/flake/KoViewConverter.cpp  
 M  +19 -1     libs/flake/KoViewConverter.h  
 M  +3 -0      libs/kopageapp/KoPAPage.cpp  
 M  +3 -0      libs/kopageapp/KoPAViewModeNormal.cpp  
 M  +9 -0      plugins/textshape/TextShape.cpp  
 M  +1 -0      plugins/textshape/TextShape.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1195774
Comment 5 T Zachmann 2010-11-12 05:24:36 UTC
SVN commit 1195841 by zachmann:

Correct Fix for bug 256624

The reason why the placeholders are shown is that they are not marked as placeholder which is
a bug in OpenOffice and looks like MSOffice copied the wrong behaviour.

<draw:frame draw:id="id2" draw:name="Title Placeholder 8" presentation:class="title" presentation:placeholder="false" presentation:style-name="a13" svg:height="1.25in" svg:width="9in" svg:x="0.5in" svg:y="0.77in">

The presentation:placeholder should be true and not false if it is a placeholder.

This patch uses the same workaround as for OpenOffice

@Sebastian: please revert your commit 1195774

CCMAIL: sebsauer@kdab.com
BUG: 256624


 M  +2 -1      KoOdfWorkaround.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1195841
Comment 6 Ganesh Paramasivam 2010-12-06 18:43:54 UTC
commit e31f1fcfe2699a1ac77eec023a00d664345337d0
branch words-change_tracking-ganeshp
Merge: 441ee37 8a0f906
Author: Ganesh Paramasivam <ganesh@crystalfab.com>
Date:   Mon Nov 15 04:18:57 2010 +0000

    Merged revisions 1195841,1195869-1195870,1195928,1196009,1196016,1196038,1196054,1196088-1196089,1196091,1196097,1196129,1196151,1196153,1196269,1196274,1196353-1196354,1196381,1196595,1196674,1196807,1196930,1196934,1197181 via svnmerge from
    svn+ssh://ganeshp@svn.kde.org/home/kde/trunk/koffice
    
    ........
      r1195841 | zachmann | 2010-11-12 09:55:12 +0530 (Fri, 12 Nov 2010) | 16 lines
    
      Correct Fix for bug 256624
    
      The reason why the placeholders are shown is that they are not marked as placeholder which is
      a bug in OpenOffice and looks like MSOffice copied the wrong behaviour.
    
      <draw:frame draw:id="id2" draw:name="Title Placeholder 8" presentation:class="title" presentation:placeholder="false" presentation:style-name="a13" svg:height="1.25in" svg:width="9in" svg:x="0.5in" svg:y="0.77in">
    
      The presentation:placeholder should be true and not false if it is a placeholder.
    
      This patch uses the same workaround as for OpenOffice
    
      @Sebastian: please revert your commit 1195774
    
      CCMAIL: sebsauer@kdab.com
      BUG: 256624
    ........
      r1195869 | rempt | 2010-11-12 14:35:40 +0530 (Fri, 12 Nov 2010) | 1 line
    
      add result for jpeg lib version 80
    ........
      r1195870 | rempt | 2010-11-12 14:37:00 +0530 (Fri, 12 Nov 2010) | 3 lines
    
      Fix jpeg unittest
    
      Patch by Lukas Tvrdy.
    ........
      r1195928 | ingwa | 2010-11-12 15:30:32 +0530 (Fri, 12 Nov 2010) | 2 lines
    
      Simplify the calculation of the world transform.
    ........
      r1196009 | lassin | 2010-11-12 17:30:47 +0530 (Fri, 12 Nov 2010) | 2 lines
    
      Simplified pptx shape placing logic.
    ........
      r1196016 | zachmann | 2010-11-12 17:42:49 +0530 (Fri, 12 Nov 2010) | 6 lines
    
      Fix mirroring of EnhancedPathShape.
    
      It is not perfect yet, but it works much better then before.
    
      CCBUG: 231686
    ........
      r1196038 | rempt | 2010-11-12 18:52:48 +0530 (Fri, 12 Nov 2010) | 1 line
    
      We don't actually need to link to this library anymore.
    ........
      r1196054 | lassin | 2010-11-12 19:41:00 +0530 (Fri, 12 Nov 2010) | 2 lines
    
      Cleaned up drawingML code, fixed connection shapes to be allowed in group shapes.
    ........
      r1196088 | rempt | 2010-11-12 20:50:04 +0530 (Fri, 12 Nov 2010) | 1 line
    
      temporary commit to make koffice compile on meego 1.0
    ........
      r1196089 | rempt | 2010-11-12 20:50:13 +0530 (Fri, 12 Nov 2010) | 3 lines
    
      --deprecation
    
      NOTE: DO NOT MERGE TO ESSEN
    ........
      r1196091 | rempt | 2010-11-12 20:52:57 +0530 (Fri, 12 Nov 2010) | 5 lines
    
      Revert "temporary commit to make koffice compile on meego 1.0"
    
      This reverts commit afdb14f4756eb6105d045ecc1a8791373080e318.
    
      Sorry for the noise...
    ........
      r1196097 | berger | 2010-11-12 20:59:59 +0530 (Fri, 12 Nov 2010) | 2 lines
    
      beta 4
    ........
      r1196129 | mkruisselbrink | 2010-11-12 21:42:04 +0530 (Fri, 12 Nov 2010) | 1 line
    
      remove more deprecated function calls
    ........
      r1196151 | uzak | 2010-11-12 22:19:58 +0530 (Fri, 12 Nov 2010) | 4 lines
    
      PPT: Language and spelling information for a run of text (TextSIException) are not
      processed at the moment.  Let's ignore this information while dividing text into spans.
      Keep it simple while fine tuning character-level style and formatting.
    ........
      r1196153 | uzak | 2010-11-12 22:27:07 +0530 (Fri, 12 Nov 2010) | 3 lines
    
      DOC: Added a FIXME comment into graphics handler, recalculation of the coordinate system
      for a group shape seems to be wrong.
    ........
      r1196269 | berger | 2010-11-13 03:30:14 +0530 (Sat, 13 Nov 2010) | 4 lines
    
      Optimization: massive speed-up of the raindrop filter.
    
      Don't create a new iterator each time a pixel value is changed, instead use the random accessor.
    ........
      r1196274 | staniek | 2010-11-13 03:46:39 +0530 (Sat, 13 Nov 2010) | 2 lines
    
      fix includes for headers of exported classes; backported from koffice-essen
    ........
      r1196353 | zachmann | 2010-11-13 10:38:24 +0530 (Sat, 13 Nov 2010) | 2 lines
    
      Add next bunch of templates from the contest
    ........
      r1196354 | zachmann | 2010-11-13 11:11:41 +0530 (Sat, 13 Nov 2010) | 2 lines
    
      Add the next template from the contest
    ........
      r1196381 | dkazakov | 2010-11-13 15:02:14 +0530 (Sat, 13 Nov 2010) | 4 lines
    
      Made new tests for convolution painter
    
      They are not relative now. They check absolute values.
    ........
      r1196595 | dkazakov | 2010-11-13 21:51:11 +0530 (Sat, 13 Nov 2010) | 3 lines
    
      Made KisConvolutionWorkerSpatial do convolution instead of correlation
    ........
      r1196674 | dkazakov | 2010-11-14 03:14:56 +0530 (Sun, 14 Nov 2010) | 3 lines
    
      Fixed KisPainter::setAlphaLocked() not to break setChannelFlags()
    ........
      r1196807 | dkazakov | 2010-11-14 14:52:29 +0530 (Sun, 14 Nov 2010) | 23 lines
    
      Added a benchmark for KisConvolutionPainter
    
      Adjusted the workers as well. Now the type of the worker depends not
      the available engine only, but on the size of the kernel as well. Even
      from theoretical perspective, KisConvolutionWorker is faster when the
      size of the kernel is less than 5x5px.
    
      Some conclusions from benchmarking the FFTW convolution worker:
      1) FFT and IFFT of the image take 30% of the time each.
      2) FFT of the kernel (even though the kernel has the same size as the
         image, but it is very sparse) takes 7.5% only.
      3) Creation of a plan for FFT and IFFT take 4% each.
    
      4) There is a possibility to make the worker faster. That is to use
         the "wisdom" (FFTW_MEASURE flag) recomended by FFTW3
         documentation. In case of activation of this flag the convolution
         becomes about 20% faster. But the use of this flag will make us
         change our system a bit: we will have to use descrete sizes of
         the convolution areas and we will need to save these "words of
         wisdom" somewhere.
    
      CCMAIL:kimageshop@kde.org
    ........
      r1196930 | dkazakov | 2010-11-14 17:46:17 +0530 (Sun, 14 Nov 2010) | 4 lines
    
      KisToolFreehand should accept all the events in painting mode
    
      BUG:256415
    ........
      r1196934 | dkazakov | 2010-11-14 18:15:56 +0530 (Sun, 14 Nov 2010) | 5 lines
    
      Fix usual Grid Tool
    
      The pen should be cosmetic to be painted nicely.
      CCBUG:251731
    ........
      r1197181 | zachmann | 2010-11-15 09:11:06 +0530 (Mon, 15 Nov 2010) | 6 lines
    
      Fix: Bug 246894 - kpresenter:openoffice:Text in the ODP document is overlapping.
    
      Handle NeoOffice as OpenOffice as it is a port of OpenOffice to Mac OS X
    
      BUG: 246894
    ........
    
    svn path=/branches/work/koffice-change-tracking/; revision=1197227
Comment 7 swathi 2011-06-28 11:14:26 UTC
Verified in 9bf0e12833ea93ebf5495445fc1f938b69ff4a13.