Fix KPresenter displays master-page text rather then only background objects when ODF presentation:background-objects-visible is true. @zagge: ok?

CC_MAIL:t.zachmann@zagge.de
BUG:256624

svn path=/branches/work/koffice-essen/; revision=1195774